--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,9 +13,12 @@
 <p class="nav-link mb-6">当社の公開調査レポートをnoteに掲載しています。</p>
  -->
 
-<h4 class="text-dark font-weight-bold mt-4 mb-3">先生の窓口</h4>
+<h4 class="text-dark font-weight-bold mt-4">先生の窓口</h4>
+<p class="mb-2">〜教職員のためのお悩み相談窓口〜</p>
 <img src="{{ site.baseurl }}/assets/images/sensei-madoguchi.jpg" class="d-block">
-<p class="nav-link">「保護者と教職員の支援」をメインテーマに、コミュニティとして教職員の先生たちをサポートする仕組みを目指したサービスです。</p>
+<p class="nav-link">
+	「保護者と教職員の支援」をメインテーマに、コミュニティとして教職員の先生たちをサポートするメール相談サービスです。
+</p>
 <a href="https://sensei-no-madoguchi.web.app" class="btn btn-primary d-block">アプリ入口</a> 
 
 <ul class="mt-3">
