--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,8 @@
 <a href="https://sensei-no-madoguchi.web.app" class="btn btn-primary d-block">アプリ入口</a> 
 
 <ul class="mt-3">
-	<li><a href="https://note.com/sensei_madoguchi/n/ne4adfca1e477">サービス構想・理念@note</a></li>
+	<li><a href="https://note.com/sensei_madoguchi/n/ne4adfca1e477">サービス概要@note</a></li>
+	<li><a href="https://note.com/sensei_madoguchi/n/n38b232121c54">使い方@note</a></li>
 </ul>
 
 <!-- <h3 class="mt-5">- Partnerships -</h3>
