--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,16 +14,17 @@
  -->
 
 <h4 class="text-dark font-weight-bold mt-4">先生の窓口</h4>
-<p class="mb-2">〜教職員のためのお悩み相談窓口〜</p>
-<img src="{{ site.baseurl }}/assets/images/sensei-madoguchi.jpg" class="d-block">
+<p class="mb-2">〜教職員のためのノウハウ相談窓口〜</p>
+<img src="{{ site.baseurl }}/assets/images/sensei-madoguchi.png" class="d-block">
 <p class="nav-link">
 	「保護者と教職員の支援」をメインテーマに、コミュニティとして教職員の先生たちをサポートするメール相談サービスです。
 </p>
 <a href="https://sensei-no-madoguchi.web.app" class="btn btn-primary d-block">アプリ入口</a> 
 
 <ul class="mt-3">
-	<li><a href="https://note.com/sensei_madoguchi/n/ne4adfca1e477">サービス概要@note</a></li>
-	<li><a href="https://note.com/sensei_madoguchi/n/n38b232121c54">使い方@note</a></li>
+	<li><a href="https://note.com/sensei_madoguchi/n/n0d392b4ead25">🔰 サービス紹介@note</a></li>
+	<li><a href="https://note.com/sensei_madoguchi/n/ne4adfca1e477">🚩 構想・理念@note</a></li>
+	<li><a href="https://note.com/sensei_madoguchi/n/n3d1e29e92bb1">🚩（続）構想・理念@note</a></li>
 </ul>
 
 <!-- <h3 class="mt-5">- Partnerships -</h3>
