--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,12 +19,24 @@
 <p class="nav-link">
 	「保護者と教職員の支援」をメインテーマに、コミュニティとして教職員の先生たちをサポートするメール相談サービスです。
 </p>
-<a href="https://sensei-no-madoguchi.web.app" class="btn btn-primary d-block">アプリ入口</a> 
+<a href="https://sensei-no-madoguchi.com" class="btn btn-primary d-block">ご紹介ページ</a> 
 
 <ul class="mt-3">
 	<li><a href="https://note.com/sensei_madoguchi/n/n0d392b4ead25">🔰 サービス紹介@note</a></li>
-	<li><a href="https://note.com/sensei_madoguchi/n/ne4adfca1e477">🚩 構想・理念@note</a></li>
-	<li><a href="https://note.com/sensei_madoguchi/n/n3d1e29e92bb1">🚩（続）構想・理念@note</a></li>
+	<li><a href="https://sensei-no-madoguchi.web.app">📱 アプリ入口</a></li>
+</ul>
+
+
+<h4 class="text-dark font-weight-bold mt-6">先生のサポートデスク</h4>
+<p class="mb-2">〜学校向け電話対応負担軽減ツール〜</p>
+<img src="{{ site.baseurl }}/assets/images/sensei-no-supportdesk.jpg" class="d-block">
+<p class="nav-link">
+	「電話をEメールのように受けられる」ようにする自動電話対応＆AI文字起こしシステムです。
+</p>
+<a href="https://sensei-no-madoguchi.com/support-desk" class="btn btn-secondary d-block">ご紹介ページ</a> 
+
+<ul class="mt-3">
+	<li><a href="https://note.com/sensei_madoguchi/n/n942abb8c24d2" class="text-secondary">🔰 サービス紹介@note</a></li>
 </ul>
 
 <!-- <h3 class="mt-5">- Partnerships -</h3>
